k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
name: backend-service
namespace: devops-app
spec:
selector:
app: backend
ports:

* port: 5000
  targetPort: 5000
